--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,4 +1,20 @@
-.checkout__ad{
-    width: 100%;
-    margin-bottom: 10px;
+.checkout {
+  display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
+}
+
+/* LEFT COLUMN */
+.checkout__left {
+  flex: 0.7;
+}
+
+/* RIGHT COLUMN */
+.checkout__right {
+  flex: 0.3;
+  padding: 20px;
+  background-color: #f3f3f3;
+  border: 1px solid lightgray;
+  height: fit-content;
 }
